--- a/app/assets/stylesheets/backend.scss
+++ b/app/assets/stylesheets/backend.scss
@@ -14,13 +14,15 @@
 *= require fullcalendar-2/fullcalendar.min
 *= require daterangepicker
 *= require bootstrap-datetimepicker
-
  */
 .fc-widget-header , .fc-list-heading > .fc-widget-header {
   color: #FFF !important;
   background-color: #333 !important;
   border-color: #222 !important;
 
+}
+.image-table > tbody > tr > td {
+  line-height: 40px !important;
 }
 
 .fc-list-heading > .fc-widget-header {
