--- a/app/views/backend/admin/employees/index.html.haml
+++ b/app/views/backend/admin/employees/index.html.haml
@@ -40,7 +40,7 @@
                 %a{:href => "#{admin_employee_path(employee)}"}
                   = image_tag employee.image ,width: '44px', class: 'img-circle'
                   %b.publisher
-                    %a{:href => "#"}= employee.full_name
+                    %a{:href => "#{admin_employee_path(employee)}"}= employee.full_name
                   -#%b
                     %em= employee.email
             %td.user-thumb= employee.phone
@@ -52,59 +52,3 @@
     %nav.text-center-xs
       %center
         = will_paginate @employees,:page_links => false, renderer: BootstrapPagination::Rails
-
-  -#.col-md-6.col-sm-5{style: 'margin-top: 20px;'}
-  -#.container{:style => "margin-top:50px"}
-    %div{:style => "margin:7px"}
-      .col-xs-9
-        %a#add-note.btn.btn-primary.btn-icon.icon-left.pull-left{href: "#{new_admin_employee_path}"}
-          %i.entypo-plus
-          New Employee
-
-      .col-xs-3.pull-right.form-group
-        -#%input.form-control{:placeholder => "Search", :style => "border-radius:0px", :type => "text"}/
-        %form.search-form-full{:method => "get", :role => "form"}
-          .form-group
-            %input#search-input.form-control{:name => "s", :placeholder => "Search...", :type => "text"}/
-            %i.entypo-search
-
-    .panel-body{:style => "padding:2px;margin-top: 30px;"}
-      %table.table.table-hover{width: '100px;'}
-        %thead
-          %tr
-            %th Name
-            %th Telephone
-            %th Address(s)
-            %th Rate per Hour
-            %th Actions
-        %tbody
-        - @employees.each do |employee|
-          %tr
-            %td
-              .col-md-3
-                = image_tag employee.image ,width: '60px', class: 'img-round'
-              .col-md-3{style:'position: absolute; left: 40px;'}
-              %br
-                %ul.user-details.font-color
-                  %ul
-                    %i.entypo-user
-                    = employee.full_name
-                  %ul
-                    %i.entypo-mail
-                    = employee.email
-            %td.padding-top
-              = employee.phone
-            %td.padding-top
-              = employee.full_address
-
-            -#%td
-            -#  = employee.role
-            %td.padding-top
-              = amount_in_currency employee.hourly_rate
-            %td.padding-top
-              = link_to 'Edit', edit_admin_employee_path(employee.id),class: 'btn btn-primary'
-              =link_to 'Delete',admin_employee_path(employee), class: 'btn btn-primary',:method => :delete, data: {:confirm => "Are you sure?"}
-
-  -#%nav.text-center-xs
-    %center
-      = will_paginate @employees,:page_links => false, renderer: BootstrapPagination::Rails
