--- a/app/views/backend/admin/employees/partials/_form.html.haml
+++ b/app/views/backend/admin/employees/partials/_form.html.haml
@@ -32,6 +32,11 @@
                   .form-group
                     %label.control-label{:for => "full_name"} Hourly Rate£
                     =f.number_field :hourly_rate , class: 'form-control' , step: :any , placeholder: 'Enter Hourly Rate' , data: {"validate": "required"}
+              .row
+                .col-md-12
+                  .form-group
+                    %label.control-label{:for => "color"} Color
+                    =f.color_field :color , class: 'form-control'
         .form-group.default-padding.pull-right{style: 'margin-top: 15px;'}
           = f.submit "Submit" , class: 'btn btn-success'
           %button.btn{:type => "reset"} Reset
