--- a/app/assets/stylesheets/backend.scss
+++ b/app/assets/stylesheets/backend.scss
@@ -14,6 +14,7 @@
 *= require fullcalendar-2/fullcalendar.min
 *= require daterangepicker
 *= require bootstrap-datetimepicker
+*= require recurring_select
  */
 .fc-widget-header , .fc-list-heading > .fc-widget-header {
   color: #FFF !important;
