--- a/app/views/backend/admin/events/edit.js.erb
+++ b/app/views/backend/admin/events/edit.js.erb
@@ -1,3 +1,5 @@
 $('#remote_container').empty().html('<%= j render "backend/admin/events/form" %>');
 $('#edit_event').modal('toggle');
+$('.recurring_select').addClass('form-control');
+
 
