--- a/app/views/backend/admin/events/new.js.erb
+++ b/app/views/backend/admin/events/new.js.erb
@@ -1,3 +1,4 @@
 $('#remote_container').empty().html('<%= j render "backend/admin/events/form" %>');
 $('#new_event').modal('toggle');
+$('.recurring_select').addClass('form-control');
 
