--- a/app/views/backend/admin/events/new.js.erb
+++ b/app/views/backend/admin/events/new.js.erb
@@ -1,4 +1,48 @@
 $('#remote_container').empty().html('<%= j render "backend/admin/events/form" %>');
 $('#new_event').modal('toggle');
 $('.recurring_select').addClass('form-control');
+$(".form-wizard").each(function(i, el)
+{
+    var $this = $(el),
+            $progress = $this.find(".steps-progress div"),
+            _index = $this.find('> ul > li.active').index();
+
+    // Validation
+    var checkFormWizardValidaion = function(tab, navigation, index)
+    {
+        if($this.hasClass('validate'))
+        {
+            var $valid = $this.valid();
+
+            if( ! $valid)
+            {
+                $this.data('validator').focusInvalid();
+                return false;
+            }
+        }
+
+        return true;
+    };
+
+
+    $this.bootstrapWizard({
+        tabClass: "",
+        onTabShow: function($tab, $navigation, index)
+        {
+
+            setCurrentProgressTab($this, $navigation, $tab, $progress, index);
+        },
+
+        onNext: checkFormWizardValidaion,
+        onTabClick: checkFormWizardValidaion
+    });
+
+    $this.data('bootstrapWizard').show( _index );
+
+    /*$(window).on('neon.resize', function()
+     {
+     $this.data('bootstrapWizard').show( _index );
+     });*/
+});
+
 
