--- a/app/views/backend/admin/events/edit.js.erb
+++ b/app/views/backend/admin/events/edit.js.erb
@@ -1,6 +1,7 @@
 $('#remote_container').empty().html('<%= j render "backend/admin/events/form" %>');
 $('#edit_event').modal('toggle');
 $('.recurring_select').addClass('form-control');
+$('.fc-popover').hide();
 $(".form-wizard").each(function(i, el)
 {
     var $this = $(el),
