--- a/app/views/backend/admin/shared/_left_sidebar.html.haml
+++ b/app/views/backend/admin/shared/_left_sidebar.html.haml
@@ -24,8 +24,12 @@
           %span.title Dashboard
       - if current_user.admin?
         %li
-          = link_to admin_calender_path do
+          = link_to admin_jobs_path do
             %i.entypo-bag
+            %span.title Jobs
+        %li
+          = link_to admin_calender_path do
+            %i.entypo-calendar
             %span.title Calender
         %li
           = link_to admin_employees_path do
@@ -47,7 +51,7 @@
       -#        %span.title Dashboard 3
       -#    %li.has-sub
       -#      %a{:href => "skin-black.html"}
-      -#        %span.title Skins
+      -#        %span.title Skiemployees
       -#      %ul
       -#        %li
       -#          %a{:href => "skin-black.html"}
