--- a/app/views/backend/admin/events/partials/_wizard.html.haml
+++ b/app/views/backend/admin/events/partials/_wizard.html.haml
@@ -48,7 +48,7 @@
           .form-group
             %label.control-label{:for => "about"} Write Something About Job
             =f.text_area :description , class: 'form-control autogrow' , rows: "5" ,placeholder: 'Job Description' , style: "overflow: hidden; word-wrap: break-word; resize: horizontal; height: 99px;"
-      - if not @event.new_record?
+      -#- if not @event.new_record?
         .row
           .col-md-12
             .form-group
@@ -105,6 +105,17 @@
       .row
         .col-md-12
           .form-group
+            %label.control-label{:for => "Priority"} Job Duration
+        .col-md-3
+          .form-group
+            = f.number_field :job_duration , class: "form-control"
+        .col-md-4
+          .form-group
+            = f.select :job_duration_type, options_for_select(Event.job_duration_types.collect { |s| [s[0].humanize, s[0]] }), {} , class: "form-control"
+      %hr
+      .row
+        .col-md-12
+          .form-group
             %label.control-label{:for => "full_name"}
               Start
               %span.text-danger *
@@ -116,6 +127,7 @@
               End
               %span.text-danger *
             = f.input :end, class: 'form-control input-sm end_hidden' , label: false
+      %hr
       .row
         .col-md-12
           .form-group
