event date validations

--- a/app/views/backend/admin/events/update.js.erb
+++ b/app/views/backend/admin/events/update.js.erb
@@ -12,6 +12,6 @@
                 true
         );
     <% end %>
-    $('#edit_event').modal('toggle');
+    $('#edit_event').modal('hide');
     flash_success("<%= flash[:success] %>");
 <% end %>
