--- a/app/views/backend/admin/shared/_left_sidebar.html.haml
+++ b/app/views/backend/admin/shared/_left_sidebar.html.haml
@@ -28,9 +28,9 @@
             %i.entypo-bag
             %span.title Jobs
         %li
-          = link_to admin_calender_path do
+          = link_to admin_calendar_index_path do
             %i.entypo-calendar
-            %span.title Calender
+            %span.title Calendar
         %li
           = link_to admin_employees_path do
             %i.entypo-user
