add datetime picker

--- a/app/assets/stylesheets/backend.scss
+++ b/app/assets/stylesheets/backend.scss
@@ -15,6 +15,7 @@
 *= require daterangepicker
 *= require bootstrap-datetimepicker
 *= require recurring_select
+*= require datetimepicker
  */
 .fc-widget-header , .fc-list-heading > .fc-widget-header {
   color: #FFF !important;
