--- a/app/views/backend/admin/events/edit.js.erb
+++ b/app/views/backend/admin/events/edit.js.erb
@@ -2,6 +2,9 @@ $('#remote_container').empty().html('<%= j render "backend/admin/events/form" %>
 $('#edit_event').modal('toggle');
 $('.recurring_select').addClass('form-control');
 $('.fc-popover').hide();
+jQuery('.datetimepicker').datetimepicker({
+});
+
 $(".form-wizard").each(function(i, el)
 {
     var $this = $(el),
