--- a/app/views/backend/admin/events/partials/_wizard.html.haml
+++ b/app/views/backend/admin/events/partials/_wizard.html.haml
@@ -117,14 +117,14 @@
             %label.control-label{:for => "full_name"}
               Start
               %span.text-danger *
-            = f.input :start, class: 'form-control input-sm start_hidden' , label: false
+            = f.text_field :start, class: 'form-control input-sm start_hidden  datetimepicker' , label: false
       .row
         .col-md-12
           .form-group
             %label.control-label{:for => "full_name"}
               End
               %span.text-danger *
-            = f.input :end, class: 'form-control input-sm end_hidden' , label: false
+            = f.text_field :end, class: 'form-control input-sm end_hidden datetimepicker' , label: false
       %hr
       .row
         .col-md-12
@@ -174,6 +174,7 @@
           Next
           %i.entypo-right-open
 :javascript
+
   $('#event_recurring').on('change',function(){
     if($('#event_recurring').val() == "null"){
     $('.end_recurrence').addClass('hidden');
