--- a/app/views/backend/admin/events/edit.js.erb
+++ b/app/views/backend/admin/events/edit.js.erb
@@ -1,5 +1,6 @@
+$('#edit_event').modal('hide');
 $('#remote_container').empty().html('<%= j render "backend/admin/events/form" %>');
-$('#edit_event').modal('toggle');
+$('#edit_event').modal('show');
 $('.recurring_select').addClass('form-control');
 $('.fc-popover').hide();
 jQuery('.datetimepicker').datetimepicker({
